src/main/java/org/example/breakoutdrop/Errors/Client/InvalidValue.java
package org.example.breakoutdrop.Errors.Client;

public class InvalidValue extends RuntimeException {
    public InvalidValue(String message) {
        super(message);
    }
}
